--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-bootsplash": "^6.3.10",
     "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.26.0",
     "react-native-reanimated": "^3.18.0",
